# fast-cloudflare

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.MD  README.MD  README_zh.MD  docker-entrypoint.sh
.github/workflows/: AutoBuild.yml  main.yml
src/: main.rs  utils.rs
