[package]
name = "fast-cf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
reqwest = "0.11.24"
ipnetwork = "*"
indicatif = "0.17.7"
surge-ping = "0.8.0"
rand = "0.8.4"
